# spec-impl-tdd

./: .gitignore  CLAUDE.md  README.md  review-comparison-report.md  zenn-article-draft.md
.claude/skills/spec-impl-tdd/: SKILL.md
.claude/skills/spec-impl-tdd/references/: green-team-agent.md  qa-agent.md  red-team-agent.md
.specify/memory/: constitution.md
backend/: pyproject.toml  requirements.txt
backend/app/: database.py  logging_config.py  main.py  models.py  routes.py
backend/tests/: conftest.py  test_conftest.py  test_database.py  test_logging_config.py  test_main.py  test_models.py  test_routes.py
frontend/: jest.config.js  package-lock.json  package.json
frontend/__tests__/app/: page.test.tsx
frontend/__tests__/components/: TodoFilter.test.tsx  TodoForm.test.tsx  TodoItem.test.tsx  TodoItemToggle.test.tsx  TodoList.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: TodoFilter.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/lib/: api.ts
specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-app/checklists/: requirements.md
specs/001-todo-app/contracts/: api.md
